--- a/RSS-React/package.json
+++ b/RSS-React/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
