--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format:fix": "prettier --write src/**/*.{ts,tsx,css}",
     "preview": "vite preview",
     "test": "vitest run",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.6.0",
