--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fix": "prettier --write src/**/*.{ts,tsx,css}"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -25,6 +26,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.10.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
